# oniguruma-jni

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yaml  codeql.yaml  release.yaml  snapshot.yaml  test.yaml
benchmark-results/: comparison.md  multi_pattern_analysis.md  opt-00-baseline.json  opt-ffi-01-arena-reuse.json  opt-ffi-02-method-handle-specialization.json  opt-ffi-03-critical-free.json  opt-ffi-04-sequence-layout-regions.json  opt-final-with-match.json  opt-jni-01-critical-array.json  opt-jni-02-combined-create.json  opt-jni-03-region-cache.json  opt-jni-04-cache-exception-class.json  optimization-results.md  optimizations.md  results.json
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/org/jetbrains/desktop/buildscripts/: CompileRustTask.kt  Platform.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: Cargo.toml
native-ffi/: oniguruma_ffi.c
native/oniguruma-jni/: Cargo.toml
native/src/: lib.rs
oniguruma-ffi/: build.gradle.kts
oniguruma-ffi/src/jmh/java/me/zolotov/oniguruma/benchmark/: CreateBenchmark.java  MultiPatternBenchmark.java
oniguruma-ffi/src/main/java/me/zolotov/oniguruma/ffi/: OnigurumaFFI.java
oniguruma-jni/: build.gradle.kts
oniguruma-jni/native/: Cargo.toml
oniguruma-jni/native/src/: lib.rs
oniguruma-jni/src/main/java/: module-info.java
oniguruma-jni/src/main/java/me/zolotov/oniguruma/jni/: Oniguruma.java  (+1 more)
oniguruma-jni/src/main/kotlin/me/zolotov/oniguruma/: Oniguruma.kt  OnigurumaLoader.kt
oniguruma-jni/src/test/kotlin/: MultiPatternBenchmark.kt  OnigurumaBenchmark.kt  OnigurumaTest.kt
src/main/kotlin/com/jetbrains/oniguruma/: Oniguruma.kt
src/main/kotlin/me/zolotov/oniguruma/: Oniguruma.kt  OnigurumaLoader.kt
src/rust-oniguruma-bindings/: Cargo.toml
src/rust-oniguruma-bindings/src/: lib.rs
src/test/kotlin/: OnigurumaBenchmark.kt  OnigurumaTest.kt
(+6 files in other folders)
