[package]
name = "oniguruma-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
name = "oniguruma_jni"

[dependencies]
onig = { version = "6", default-features = false }
onig_sys = { version = "69", default-features = false }
jni = { version = "0.21.1" }
thiserror = "2.0.11"

[profile.release]
lto = true
strip = "symbols"

[profile.bench]
inherits = "release"
strip = false
