[package]
name = "rust-oniguruma-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
onig = { version = "6", default-features = false }
onig_sys = { version = "69", default-features = false }
jni = { version = "0.21.1", optional = true }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["jni"]
jni = ["dep:jni"]